--- a/src/main/resources/templates/fragment/header.html
+++ b/src/main/resources/templates/fragment/header.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html xmlns:th ="http://www.thymeleaf.org">
 <div th:fragment="headerFragment">
-    <title>개인정보 유출 :: 얼굴 매칭 서비스</title>
+    <title>행복이 :: 얼굴 매칭 서비스</title>
     <meta http-equiv ="Content-Type" content="text/html; charset=UTF-8" />
     <link rel = "stylesheet" href ="http://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"/>
+
+    <link rel="stylesheet" href="/css/main.css" />
+    <noscript><link rel="stylesheet" href="/css/noscript.css" /></noscript>
 </div>
 
-
+<!--<head>-->
+<!--    <meta charset="utf-8" />-->
+<!--    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />-->
+<!--</head>-->
 
