--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,17 +1,72 @@
+<!DOCTYPE HTML>
+<!--
+	Photon by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+
 <html xmlns:th = "http://www.thymeleaf.org">
-    <head>
-        <th:block th:replace="fragment/header :: headerFragment"></th:block>
-    </head>
+<head>
+	<th:block th:replace="fragment/header :: headerFragment"></th:block>
+</head>
 
-    <body>
-    <h1>이미지  입력</h1>
-    <button type="button" class="btn btn-primary" id="btn-result">결과 전송 test</button>
-    <form id="input-image" method="post" enctype="multipart/form-data">
-        <input type="file" name="image" >
-        <button type="button" class="btn btn-success" id="btn-upload">파일 업로드</button>
-    </form>
 
-    <th:block th:replace="fragment/footer :: footerFragment"></th:block>
-   </body>
+	<body class="is-preload">
 
+		<!-- Header -->
+			<section id="header">
+				<div class="inner">
+					<span class="icon solid major fa-cloud"></span>
+					<h1><strong>행복이</strong><br></h1>
+					<h3>개인정보 검출 도우미 </h3>
+					<p>행복이는 개인 정보 검출 시스템입니다.<br>
+					유해사이트, SNS, Youtube 및 커뮤니티 사이트로부터 <br>
+					사용자의 사진을 검색하여 개인정보 유출 여부를 확인해드리겠습니다.</p>
+					<ul class="actions special">
+						<li><a href="#three" class="button scrolly">구경하기</a></li>
+					</ul>
+				</div>
+			</section>
+
+		<!-- Three -->
+		<section id="three" class="main style1 special" style="padding-bottom: 0px">
+			<div class="container">
+				<header class="major">
+					<h2>개인정보 검출 시스템</h2>
+				</header>
+				<p>행복이는 다음과 같이 동작합니다</p>
+				<div class="row gtr-150">
+					<div class="col-4 col-12-medium">
+						<span class="image fit"><img src="/images/pic01.png" alt="데이터 수집" /></span>
+						<h3>데이터 수집</h3>
+						<p>유해사이트, SNS, Youtube 및 커뮤니티 사이트에서 크롤링을 통해 데이터를 수집합니다.</p>
+					</div>
+					<div class="col-4 col-12-medium">
+						<span class="image fit"><img src="/images/pic02.png" alt="인공지능" /></span>
+						<h3>최첨단 인공지능</h3>
+						<P>최고의 성능을 가진 인공지능이 수집된 데이터와 사용자의 사진을 비교합니다.</P>
+					</div>
+					<div class="col-4 col-12-medium">
+						<span class="image fit"><img src="/images/pic03.png" alt="결" /></span>
+						<h3>개인 정보 매칭 시스템</h3>
+						<P>입력된 사진과 수집된 데이터를 비교하여 매칭 결과를 보여드립니다.</P>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<div class="align-center" style="margin-bottom: 40px;">
+			<button type="button" id="btn-start" onclick="window.location.href='/input'">시작 하기</button>
+
+		</div>
+
+		<section id="footer">
+			<ul class="copyright">
+				<li>&copy; 김병수, 김태준, 이충헌</li>
+			</ul>
+		</section>
+
+
+		<th:block th:replace="fragment/footer :: footerFragment"></th:block>
+	</body>
 </html>
