--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -47,7 +47,7 @@
 						<P>최고의 성능을 가진 인공지능이 수집된 데이터와 사용자의 사진을 비교합니다.</P>
 					</div>
 					<div class="col-4 col-12-medium">
-						<span class="image fit"><img src="/images/pic03.png" alt="결" /></span>
+						<span class="image fit"><img src="/images/pic03.png" alt="결과" /></span>
 						<h3>개인 정보 매칭 시스템</h3>
 						<P>입력된 사진과 수집된 데이터를 비교하여 매칭 결과를 보여드립니다.</P>
 					</div>
