결과 초기화,사용자 입력이미지 보기

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -2351,6 +2351,9 @@ input, select, textarea {
 			}
 
 /* Image */
+	div #input-image-view{
+		padding-left: 50px;
+	}
 
 	.image {
 		border-radius: 4px;
@@ -2393,6 +2396,7 @@ input, select, textarea {
 			.image.fit img {
 				width: 100%;
 			}
+
 
 /* List */
 
