--- a/src/main/resources/templates/input.html
+++ b/src/main/resources/templates/input.html
@@ -13,10 +13,13 @@
 					<h1><strong>행복이</strong><br></h1>
 					<h3>개인정보 검출 도우미 </h3>
 					<div class="align-center">
-						<input type="file" name="image" >
+						<input type="file" name="image" id ="input_file">
 						<button type="button" id="btn-upload">파일 업로드</button>
 					</div>
 					<div class ="align-center">
+						<br>
+						<br>
+							<img class = "input-image-view" src="" width="200" align="center" >
 						<br>
 						<br>
 						<h1><strong id ="wait-msg"></strong><br></h1>
