--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -19,6 +19,8 @@
 		</form>
 
         <section id="one" class="main style1 special">
+			<img th:src="*{'data:image/png;base64,'+inputImage}" alt="사용자 입력 이미지" width="150" align="center" >
+
 			<div class="container">
 				<header class="major">
 					<h2>개인 정보 유출 결과</h2>
