--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -19,7 +19,7 @@
 		</form>
 
         <section id="one" class="main style1 special">
-			<img th:src="*{'data:image/png;base64,'+inputImage}" alt="사용자 입력 이미지" width="150" align="center" >
+			<img th:src="*{'data:image/png;base64,'+inputImage}" width="150" align="center" >
 
 			<div class="container">
 				<header class="major">
