--- a/src/main/resources/templates/fragment/footer.html
+++ b/src/main/resources/templates/fragment/footer.html
@@ -12,6 +12,7 @@
     <script src="/js/breakpoints.min.js"></script>
     <script src="/js/util.js"></script>
     <script src="/js/main.js"></script>
+    <script src =/js/jquery.ajax-cross-origin.min.js></script>
 
     <script src="/js/app/input.js"></script>
 
